# elefant-rs

./: Cargo.toml  commands.md
src/: main.rs
src/model/: events.rs  mod.rs  model_test.rs  shape.rs  shape_props.rs
src/utils/: mod.rs
src/view/: main_window.rs  mod.rs  pane.rs  state.rs  tree.rs  vm.rs
src/view/items/: mod.rs  side_panel_item.rs
src/view/navigation/: side_panel_item.rs
src/view/screens/: communication.rs  editor.rs  home.rs  mod.rs
src/view/screens/edit_screen/: json.rs  mod.rs  shape.rs
src/view/screens/home_screen/: mod.rs
src/view/screens/settings_screen/: mod.rs
